// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`brackets.hbs - {"singleQuote":true} format 1`] = `
====================================options=====================================
parsers: ["glimmer"]
printWidth: 80
singleQuote: true
                                                                                | printWidth
=====================================input======================================
<div title='My title'></div>
<div title="My title"></div>
<div title='My "title"'></div>
<div title="My other 'title'"></div>

=====================================output=====================================
<div title='My title'></div>
<div title='My title'></div>
<div title='My "title"'></div>
<div title="My other 'title'"></div>
================================================================================
`;

exports[`brackets.hbs format 1`] = `
====================================options=====================================
parsers: ["glimmer"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<div title='My title'></div>
<div title="My title"></div>
<div title='My "title"'></div>
<div title="My other 'title'"></div>

=====================================output=====================================
<div title="My title"></div>
<div title="My title"></div>
<div title='My "title"'></div>
<div title="My other 'title'"></div>
================================================================================
`;

exports[`trimming-and-whitespace.hbs - {"singleQuote":true} format 1`] = `
====================================options=====================================
parsers: ["glimmer"]
printWidth: 80
singleQuote: true
                                                                                | printWidth
=====================================input======================================
<div class="attr
"></div>

<div class="
attr"></div>

<div class="
attr
"></div>

<div class="



attr


"></div>

<div class="
    attr
      attr

  attr
                       attr
          attr
"></div>
=====================================output=====================================
<div class='attr'></div>

<div class='attr'></div>

<div class='attr'></div>

<div class='attr'></div>

<div
  class='attr
      attr

  attr
                       attr
          attr'
></div>
================================================================================
`;

exports[`trimming-and-whitespace.hbs format 1`] = `
====================================options=====================================
parsers: ["glimmer"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<div class="attr
"></div>

<div class="
attr"></div>

<div class="
attr
"></div>

<div class="



attr


"></div>

<div class="
    attr
      attr

  attr
                       attr
          attr
"></div>
=====================================output=====================================
<div class="attr"></div>

<div class="attr"></div>

<div class="attr"></div>

<div class="attr"></div>

<div
  class="attr
      attr

  attr
                       attr
          attr"
></div>
================================================================================
`;
